test/invalid/exception_wrong_type.py
# Exception() with wrong argument type
def main() -> None:
    e = Exception(42)  # Exception() argument must be a string
